src/test/ui/did_you_mean/match-refactor-to-expr.stderr
error: expected one of `.`, `?`, `{`, or an operator, found `;`
  --> $DIR/match-refactor-to-expr.rs:18:9
   |
LL |         match
   |         ----- help: try removing this `match`
LL |         Some(4).unwrap_or_else(5)
   |                                  - expected one of `.`, `?`, `{`, or an operator here
LL |         //~^ NOTE expected one of `.`, `?`, `{`, or an operator here
LL |         ; //~ NOTE unexpected token
   |         ^ unexpected token

error: aborting due to previous error

